--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,9 +4,8 @@
   become: yes
   tasks:
     - name: "nginx installation"
-      ansible.builtin.debug:
-        msg: "nginx is installling....! boss"
-        name : nginx
+      ansible.builtin.package:
+        name: nginx
         state: present
 
 
