--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,3 +7,13 @@
         state: present
 
 
+
+# - name: nginx
+#   hosts: local/anyserver
+#   connection: local
+#   become: yes
+#   tasks:
+#     - name: "nginx installation"
+#       ansible.builtin.package:
+#        - name: nginx
+#        - state: present
