--- a/ansible-roboshop/mongodb.yaml
+++ b/ansible-roboshop/mongodb.yaml
@@ -17,7 +17,7 @@
     ansible.builtin.service:
       name: mongod
       state: started
-      enable: yes
+      enabled: yes
 
   - name: allowing the remote connection
     ansible.builtin.replace:
