--- a/ansible-roboshop/catalogue.yaml
+++ b/ansible-roboshop/catalogue.yaml
@@ -35,4 +35,49 @@
       src: /tmp/catalogue.zip
       dest: /app
       remote_src: yes
-  - name: 
+
+  - name: node modules installation
+    community.general.npm:
+      path: /app
+
+  - name: copying the service conifguration
+    ansible.builtin.copy:
+      src: catalogue.service
+      dest: etc/systemd/system/catalogue.service
+
+  - name: configuring catalogue service
+    ansible.builtin.systemd_service:
+      name: catalogue
+      daemon_reload: true
+
+  - name: start and enable service
+    ansible.builtin.service:
+      name: catalogue
+      state: started
+      enabled: yes
+
+  - name: copy mongodb repo
+    ansible.builtin.copy:
+      src: mongo.repo
+      dest: /etc/yum.repos.d/mongo.repo
+
+  - name: install mongodb client
+    ansible.builtin.dnf:
+      name: mongodb-mongosh
+      state: present
+
+  - name: check products loaded or not
+    ansible.builtin.command: mongosh --host mongodb.daws84s.site --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
+    register: catalogue_output
+
+  - name: print catalogue output
+    ansible.builtin.debug:
+      msg: "{{ catalogue_output }}"
+
+  - name: load products
+    ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
+    when: catalogue_output.stdout | int < 0
+
+
+  
+
