--- a/ansible-roboshop/catalogue.yaml
+++ b/ansible-roboshop/catalogue.yaml
@@ -78,6 +78,11 @@
     ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
     when: catalogue_output.stdout | int < 0
 
+  - name: we are using the registers
+    ansible.builtin.debug:
+    msg: {{ ls -ltr }}
+    rgister: output
+
 
   
 
