--- a/ansible-roboshop/inventory.ini
+++ b/ansible-roboshop/inventory.ini
@@ -1,4 +1,12 @@
 [mongodb]
-172.31.28.233 ansible_user=ec2-user ansible_password=DevOps321
+172.31.28.233
+
 [catalogue]
-172.31.29.69 ansible_user=ec2-user ansible_password=DevOps321
+172.31.29.69
+
+[redis]
+xxxxx
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
